--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.54.8"
-    
+    "sass": "^1.54.8",
+    "scss": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
